<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Rich Text Editor</string>
    <string name="strike">Strike</string>
    <string name="italic">Italic</string>
    <string name="bold">Bold</string>
    <string name="normal_edit_text_hint" tools:ignore="ExtraTranslation">Normal text</string>
    <string name="rich_text_edit_text_hint" tools:ignore="ExtraTranslation">Rich editor</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="mark_down_button_text">Convert To Markdown</string>
    <string name="dummy_text">Dummy text</string>
    <string name="convert_to_style_button">Convert to Style</string>
    <string name="style_string_text_view">Style String</string>
</resources>